--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-scrollable-tab-view",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -29,9 +29,8 @@
   },
   "homepage": "https://github.com/brentvatne/react-native-scrollable-tab-view#readme",
   "dependencies": {
-    "@react-native-community/viewpager": "3.3.0",
+    "react-native-pager-view": "^6.2.3",
     "create-react-class": "^15.6.2",
-    "deprecated-react-native-prop-types": "^2.3.0",
     "prop-types": "^15.6.0",
     "react-timer-mixin": "^0.13.3"
   },
